--- a/public/app/containers/sandbox/sandbox.html
+++ b/public/app/containers/sandbox/sandbox.html
@@ -1,51 +1,62 @@
 <div class="sandbox-row">
   <div id="stage">
-    <form ng-submit="sandboxComp.rename()" id="sandbox-form">
+    <form ng-submit="sandboxComp.save()" id="sandbox-form">
       <input type="hidden">
       <input type="text" maxlength="32" class="form-control" id="sandbox-name" placeholder="" ng-model="sandboxComp.machine.name">
-      <button type="submit" class="btn btn-default">rename</button>
+      <button type="submit" class="btn btn-default">save machine</button>
     </form>
-    <div ng-click="sandboxComp.buildMode = !sandboxComp.buildMode">
-      build mode: {{sandboxComp.buildMode}}
+    <div ng-click="sandboxComp.previewMode = !sandboxComp.previewMode">
+      preview on: {{sandboxComp.previewMode}}
     </div>
     <div id="canvas-stage">
-      <canvas ng-show="sandboxComp.buildMode" ng-mousemove="sandboxComp.drawPreview()" id="preview-canvas"></canvas>
+      <canvas ng-show="sandboxComp.previewMode" ng-mousemove="sandboxComp.drawPreview()" ng-click="sandboxComp.getRelativeXY()" id="preview-canvas"></canvas>
     </div>
   </div>
 
   <div id="tool-box">
-    <!-- <div class="checkbox">
-      <label><input type="checkbox" ng-model="sandboxComp.oneAtATime">Open only one at a time</label>
-    </div> -->
     <ol class="instructions">
       <li>select an asset type (e.g. ball, platform)</li>
       <li>tweak its settings (e.g. radius, height)</li>
       <li>mouse over the sandbox to preview its starting point</li>
       <li>click to add the asset to your machine</li>
     </ol>
+    <!-- <div class="checkbox">
+      <label><input type="checkbox" ng-model="sandboxComp.oneAtATime">Open only one at a time</label>
+    </div> -->
     <uib-accordion close-others="sandboxComp.oneAtATime">
-        <div uib-accordion-group class="panel-default" is-open="status.open" ng-repeat="(assetName, asset) in sandboxComp.assets">
-            <uib-accordion-heading>
-                {{assetName}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
-            </uib-accordion-heading>
-            <p>{{asset.blurb}}</p>
-            <div class="asset-panel">
-              <div class="asset-diagram"></div>
-              <div class="asset-settings">
-                <div class="input-group" ng-repeat="(paramName, param) in asset.parameters">
-                  <span class="input-group-addon">{{paramName}}</span>
-                  <input type="number" class="form-control" placeholder="" ng-model="sandboxComp.assets[assetName].parameters[paramName]">
-                </div>
+      <div uib-accordion-group class="panel-default" is-open="asset.active"
+          ng-click="sandboxComp.buildMode(assetName)"
+          ng-repeat="(assetName, asset) in sandboxComp.assetLibrary">
+        <uib-accordion-heading>
+          {{assetName}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': asset.active, 'glyphicon-chevron-right': !asset.active}"></i>
+        </uib-accordion-heading>
+        <p>{{asset.blurb}}</p>
+        <div class="asset-panel">
+          <div class="asset-diagram"></div>
+          <div class="asset-settings">
+            <div class="input-group" ng-repeat="(paramName, param) in asset.parameters">
+              <div class="asset-labels"><span>{{paramName}}</span> <span>{{sandboxComp.assetLibrary[assetName].parameters[paramName].value}}</span></div>
+              <div class="range-slider">
+                <input class="range-slider-input"
+                    ng-model="sandboxComp.assetLibrary[assetName].parameters[paramName].value"
+                    type="range" min="1" max="sandboxComp.assetLibrary[assetName].parameters[paramName].value" step="1">
               </div>
-
             </div>
-            <button class="btn btn-warning undo-button">remove last {{name}}</button>
+          </div>
+
         </div>
-        <div uib-accordion-group class="panel-danger" heading="delete machine">
-            <p>to delete this machine, click the button below</p>
-            <button class="btn btn-danger" ng-click="sandboxComp.delete()">delete</button>
-        </div>
+        <button class="btn btn-warning undo-button" ng-click="">remove last {{assetName}}</button>
+      </div>
+      <button class="btn btn-info tool-box-btn-1 panel-heading" ng-click="sandboxComp.save()">
+        <h4 class="panel-title">save machine</h4>
+      </button>
+      <div uib-accordion-group class="panel-danger" heading="delete machine" is-open="sandboxComp.status.open">
+        <p>to delete this machine, click the button below</p>
+        <button class="btn btn-danger" ng-click="sandboxComp.delete()">delete</button>
+      </div>
     </uib-accordion>
+
+    <p ng-repeat="(assetName, asset) in sandboxComp.assetLibrary">active: {{asset.active}}, params: {{asset.parameters}}</p>
   </div>
 
 </div>
