--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
     <!-- Physics script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.10.0/matter.min.js"></script>
 
+    <!-- Asset Library script -->
+    <script src="js/assetLibrary.js"></script>
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
