--- a/public/app/containers/sandbox/sandbox.html
+++ b/public/app/containers/sandbox/sandbox.html
@@ -5,11 +5,11 @@
       <input type="text" maxlength="32" class="form-control" id="sandbox-name" placeholder="" ng-model="sandboxComp.machine.name">
       <button type="submit" class="btn btn-default">save machine</button>
     </form>
-    <div ng-click="sandboxComp.previewMode = !sandboxComp.previewMode">
+    <!-- <div ng-click="sandboxComp.previewMode = !sandboxComp.previewMode">
       preview on: {{sandboxComp.previewMode}}
-    </div>
+    </div> -->
     <div id="canvas-stage">
-      <canvas ng-show="sandboxComp.previewMode" ng-mousemove="sandboxComp.drawPreview()" ng-click="sandboxComp.getRelativeXY()" id="preview-canvas"></canvas>
+      <canvas ng-show="sandboxComp.previewMode" ng-mousemove="sandboxComp.drawPreview()" ng-click="sandboxComp.getRelativeXY(); sandboxComp.addAsset()" id="preview-canvas"></canvas>
     </div>
   </div>
 
@@ -17,8 +17,8 @@
     <ol class="instructions">
       <li>select an asset type (e.g. ball, platform)</li>
       <li>tweak its settings (e.g. radius, height)</li>
-      <li>mouse over the sandbox to preview its starting point</li>
-      <li>click to add the asset to your machine</li>
+      <li>mouse over the sandbox to preview its <em>starting point</em></li>
+      <li>click to add* the asset to your machine <br/>* keep in mind that where you click is its starting point</li>
     </ol>
     <!-- <div class="checkbox">
       <label><input type="checkbox" ng-model="sandboxComp.oneAtATime">Open only one at a time</label>
@@ -32,22 +32,28 @@
         </uib-accordion-heading>
         <p>{{asset.blurb}}</p>
         <div class="asset-panel">
-          <div class="asset-diagram"></div>
+          <!-- <div class="asset-diagram"></div> -->
           <div class="asset-settings">
             <div class="input-group" ng-repeat="(paramName, param) in asset.parameters">
-              <div class="asset-labels"><span>{{paramName}}</span> <span>{{sandboxComp.assetLibrary[assetName].parameters[paramName].value}}</span></div>
+              <div class="asset-labels">
+                <span>{{paramName}}</span>
+                <span>{{(param.model * param.factor).toFixed(0)}}</span>
+              </div>
               <div class="range-slider">
                 <input class="range-slider-input"
-                    ng-model="sandboxComp.assetLibrary[assetName].parameters[paramName].value"
-                    type="range" min="1" max="sandboxComp.assetLibrary[assetName].parameters[paramName].value" step="1">
+                    ng-model="sandboxComp.assetLibrary[assetName].parameters[paramName].model"
+                    type="range" min="{{param.min}}" max="{{param.max}}" step="{{param.step}}">
               </div>
             </div>
           </div>
 
         </div>
-        <button class="btn btn-warning undo-button" ng-click="">remove last {{assetName}}</button>
+        <button class="btn btn-warning undo-button" ng-click="sandboxComp.removeLastType(assetName)">remove last {{assetName}}</button>
       </div>
-      <button class="btn btn-info tool-box-btn-1 panel-heading" ng-click="sandboxComp.save()">
+      <button class="btn btn-info tool-box-btn-1 panel-heading" ng-click="sandboxComp.resetSandbox()">
+        <h4 class="panel-title">reset machine</h4>
+      </button>
+      <button class="btn btn-primary tool-box-btn-1 panel-heading" ng-click="sandboxComp.save()">
         <h4 class="panel-title">save machine</h4>
       </button>
       <div uib-accordion-group class="panel-danger" heading="delete machine" is-open="sandboxComp.status.open">
@@ -56,7 +62,7 @@
       </div>
     </uib-accordion>
 
-    <p ng-repeat="(assetName, asset) in sandboxComp.assetLibrary">active: {{asset.active}}, params: {{asset.parameters}}</p>
+    <!-- <p ng-repeat="(assetName, asset) in sandboxComp.assetLibrary">active: {{asset.active}}, params: {{asset.parameters}}</p> -->
   </div>
 
 </div>
