--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <script src="app/components/navbar/navbar.js"></script>
     <script src="app/components/footer/footer.js"></script>
     <script src="app/components/alerts/alerts.js"></script>
+    <script src="app/components/thumbnail/thumbnail.js"></script>
 
     <!-- Angular services -->
     <script src="app/services/data-services.js"></script>
@@ -55,7 +56,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
   </head>
-  <body ng-app="App">
+  <body ng-app="App" class="container">
     <navbar-comp></navbar-comp>
 
     <div ui-view class="ui-view-div container"></div>
