--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
   <body ng-app="App" class="container">
     <navbar-comp></navbar-comp>
 
-    <div ui-view class="ui-view-div container"></div>
+    <div ui-view class="ui-view-div"></div>
 
     <footer-comp></footer-comp>
 
