--- a/public/app/containers/home/home.html
+++ b/public/app/containers/home/home.html
@@ -1,8 +1,21 @@
 <alerts-comp></alerts-comp>
+<div class="homepanel-container col-sm-4 col-lg-3">
+  <div class="homepanel-banner"></div>
+  <form ng-submit="homeComp.search()" class="search-form">
+    <div class="search">
+      <input type="text" placeholder="search machines or users" ng-model="homeComp.query">
+      <button class="fa fa-search search-button"></button>
+    </div>
+  </form>
+  <div class="homepanel-news">
+    <p>stuff, man</p>
+  </div>
+</div>
 
-<div class="gallery-container">
-  <div class="well col-sm-4 machine-well" ng-repeat="machine in homeComp.machines track by $index">
-    <div class="thumbnail" id="thumbnail-{{machine._id}}">
+<div class="gallery-container col-sm-8 col-lg-9">
+  <div class="col-sm-4 col-lg-3 machine-well"
+      ng-repeat="machine in homeComp.machines | filter:homeComp.query">
+    <div class="thumbnail" id="thumbnail-{{machine._id}}" ui-sref="machineState({id: machine._id})">
       <thumbnail-comp machine="machine"></thumbnail-comp>
       <!-- <canvas id="canvas-{{$index}}" class="thumbnail-canvas"
               width="{{homeComp.thumbnailW}}"
@@ -11,21 +24,8 @@
     <div class="caption">
       <a ui-sref="machineState({id: machine._id})">
         <h3>{{machine.name}}</h3>
-        <p>made by {{machine.user.name}}</p>
       </a>
+      <p>built by <a ui-sref="">{{machine.user.name}}</a></p>
     </div>
   </div>
 </div>
-
-<!-- <div class="col-sm-4 home-search-container">
-    <form ng-submit="homeComp.search()">
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="search" ng-model="homeComp.query" />
-        <span class="input-group-btn">
-          <button type="submit" class="btn btn-default search-button" data-toggle="collapse" data-target="#nav-collapse-target">
-            Search
-          </button>
-        </span>
-      </div>
-    </form>
-</div> -->
