--- a/public/app/containers/machine/machine.html
+++ b/public/app/containers/machine/machine.html
@@ -12,22 +12,26 @@
     <uib-accordion close-others="sandboxComp.oneAtATime">
       <div uib-accordion-group class="panel-default" is-open="status.open" ng-click="">
         <uib-accordion-heading>
-          username here <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': asset.active, 'glyphicon-chevron-right': !asset.active}"></i>
+          machine stats <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': asset.active, 'glyphicon-chevron-right': !asset.active}"></i>
         </uib-accordion-heading>
-        <p>something else</p>
+        <p>originally made by {{machineComp.machine.user.name}}</p>
+        <p>## of people have forked this</p>
+        <button ng-if="machineComp.userMatch" class="btn btn-info undo-button"
+            ui-sref="sandboxState({id: machineComp.machine._id})">
+          edit this in sandbox</button>
         <div class="asset-panel">
           <div class="asset-diagram">
           </div>
           <div class="asset-settings">
           </div>
         </div>
-        <button class="btn btn-warning info" ng-click="">go to profile</button>
+        <!-- <button class="btn btn-warning info" ng-click="">go to profile</button> -->
       </div>
       <button class="btn btn-info tool-box-btn-1 panel-heading" ng-click="machineComp.resetMachine()">
         <h4 class="panel-title">reset machine</h4>
       </button>
       <button class="btn btn-primary tool-box-btn-1 panel-heading" ng-click="">
-        <h4 class="panel-title">copy machine</h4>
+        <h4 class="panel-title">fork machine</h4>
       </button>
     </uib-accordion>
 
