--- a/public/app/containers/sandbox/sandbox.html
+++ b/public/app/containers/sandbox/sandbox.html
@@ -5,11 +5,15 @@
       <input type="text" maxlength="32" class="form-control" id="sandbox-name" placeholder="" ng-model="sandboxComp.machine.name">
       <button type="submit" class="btn btn-default">save machine</button>
     </form>
-    <!-- <div ng-click="sandboxComp.previewMode = !sandboxComp.previewMode">
+    <div ng-click="sandboxComp.previewMode = !sandboxComp.previewMode">
       preview on: {{sandboxComp.previewMode}}
-    </div> -->
+    </div>
+    <div ng-click="sandboxComp.staticMode = !sandboxComp.staticMode">
+      static on: {{sandboxComp.staticMode}}
+    </div>
     <div id="canvas-stage">
-      <canvas ng-show="sandboxComp.previewMode" ng-mousemove="sandboxComp.drawPreview()" ng-click="sandboxComp.getRelativeXY(); sandboxComp.addAsset()" id="preview-canvas"></canvas>
+      <canvas ng-show="sandboxComp.previewMode" class="canvas-layer" ng-mousemove="sandboxComp.drawPreview()" ng-click="sandboxComp.getRelativeXY(); sandboxComp.addAsset()" id="preview-canvas"></canvas>
+      <canvas ng-show="sandboxComp.staticMode" class="canvas-layer" id="static-canvas"></canvas>
     </div>
   </div>
 
@@ -50,8 +54,11 @@
         </div>
         <button class="btn btn-warning undo-button" ng-click="sandboxComp.removeLastType(assetName)">remove last {{assetName}}</button>
       </div>
-      <button class="btn btn-info tool-box-btn-1 panel-heading" ng-click="sandboxComp.resetSandbox()">
-        <h4 class="panel-title">reset machine</h4>
+      <button class="btn btn-info tool-box-btn-1 panel-heading" ng-click="sandboxComp.staticSandbox()">
+        <h4 class="panel-title">stop machine</h4>
+      </button>
+      <button class="btn btn-success tool-box-btn-1 panel-heading" ng-click="sandboxComp.resetSandbox(); sandboxComp.turnOffStatic()">
+        <h4 class="panel-title">play machine</h4>
       </button>
       <button class="btn btn-primary tool-box-btn-1 panel-heading" ng-click="sandboxComp.save()">
         <h4 class="panel-title">save machine</h4>
