--- a/public/app/containers/machine/machine.html
+++ b/public/app/containers/machine/machine.html
@@ -5,7 +5,7 @@
     </div>
   </div>
 
-  <div id="tool-box">
+  <div id="machine-box">
     <!-- <div class="checkbox">
       <label><input type="checkbox" ng-model="sandboxComp.oneAtATime">Open only one at a time</label>
     </div> -->
