--- a/public/app/containers/sandbox/sandbox.html
+++ b/public/app/containers/sandbox/sandbox.html
@@ -59,7 +59,7 @@
         <h4 class="panel-title">stop machine</h4>
       </button>
       <button class="btn btn-success tool-box-btn-1 panel-heading" ng-click="sandboxComp.resetSandbox(); sandboxComp.turnOffStatic()">
-        <h4 class="panel-title">play machine</h4>
+        <h4 class="panel-title">reset machine</h4>
       </button>
       <button class="btn btn-primary tool-box-btn-1 panel-heading" ng-click="sandboxComp.save()">
         <h4 class="panel-title">save machine</h4>
